# 7_dof_robot_arm

./: README.md
robot_bringup/: package.xml
robot_bringup/launch/: complete_launch.launch
robot_controller/: CMakeLists.txt  package.xml
robot_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
robot_controller/include/robot_controller/: robot_interface.h
robot_controller/launch/: controller.launch
robot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
robot_moveit/config/: fake_controllers.yaml  gazebo_robot.urdf  joint_limits.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
robot_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
robot_urdf/: CMakeLists.txt  package.xml
robot_urdf/launch/: gazebo.launch  visualize.launch  visualize.rviz
robot_urdf/urdf/: arctos_urdf.xacro  gazebo_materials.xacro
